template.yml
---
AWSTemplateFormatVersion: "2010-09-09"

Description:
  CloudFormation Template for ethcore/parity

########################## Parameters #######################################
Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the ECS instances.
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Select a VPC that allows instances access to the Internet.
  SubnetID:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Select two subnets in your selected VPC.
  DesiredCapacity:
    Type: Number
    Default: '1'
    Description: Number of instances to launch in your ECS cluster.
  MaxSize:
    Type: Number
    Default: '1'
    Description: Maximum number of instances that can be launched in your ECS cluster.
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t2.micro, t2.small, t2.medium, t2.large, m3.medium, m3.large,
      m3.xlarge, m3.2xlarge, m4.large, m4.xlarge, m4.2xlarge, m4.4xlarge, m4.10xlarge,
      c4.large, c4.xlarge, c4.2xlarge, c4.4xlarge, c4.8xlarge, c3.large, c3.xlarge,
      c3.2xlarge, c3.4xlarge, c3.8xlarge, r3.large, r3.xlarge, r3.2xlarge, r3.4xlarge,
      r3.8xlarge, i2.xlarge, i2.2xlarge, i2.4xlarge, i2.8xlarge]
    ConstraintDescription: Please choose a valid instance type.

########################## Mappings #######################################
Mappings:
  AWSRegionToAMI:
    us-east-1:
      "AMIID" : "ami-c58c1dd3" # Amazon Linux AMI 2017.03
    us-east-2:
      "AMIID" : "ami-4191b524" # Amazon Linux AMI 2017.03
    us-west-1:
      "AMIID" : "ami-7a85a01a" # Amazon Linux AMI 2017.03
    us-west-2:
      "AMIID" : "ami-4836a428" # Amazon Linux AMI 2017.03
    ca-central-1:
      "AMIID" : "ami-0bd66a6f" # Amazon Linux AMI 2017.03
    eu-west-1:
      "AMIID" : "ami-01ccc867" # Amazon Linux AMI 2017.03
    eu-central-1:
      "AMIID" : "ami-b968bad6" # Amazon Linux AMI 2017.03
    eu-west-2:
      "AMIID" : "ami-b6daced2" # Amazon Linux AMI 2017.03
    ap-southeast-1:
      "AMIID" : "ami-fc5ae39f" # Amazon Linux AMI 2017.03
    ap-southeast-2:
      "AMIID" : "ami-162c2575" # Amazon Linux AMI 2017.03
    ap-northeast-2:
      "AMIID" : "ami-9d15c7f3" # Amazon Linux AMI 2017.03
    ap-northeast-1:
      "AMIID" : "ami-923d12f5" # Amazon Linux AMI 2017.03
    ap-south-1:
      "AMIID" : "ami-52c7b43d" # Amazon Linux AMI 2017.03
    sa-east-1:
      "AMIID" : "ami-37cfad5b" # Amazon Linux AMI 2017.03

########################## Resources #######################################
Resources:
  ParityFileSystem: 
    Type: "AWS::EFS::FileSystem"
    Properties: 
      FileSystemTags: 
        - 
          Key: "Name"
          Value: "ParityFileSystem"
  MountTarget1: 
    Type: "AWS::EFS::MountTarget"
    Properties: 
      FileSystemId: !Ref ParityFileSystem
      SubnetId: !Select [ 0, !Ref SubnetID ] 
      SecurityGroups: 
        - !Ref EfsSecurityGroup
  MountTarget2: 
    Type: "AWS::EFS::MountTarget"
    Properties: 
      FileSystemId: !Ref ParityFileSystem
      SubnetId: !Select [ 1, !Ref SubnetID ] 
      SecurityGroups: 
        - !Ref EfsSecurityGroup
  EfsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EFS Security Group
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          SourceSecurityGroupId: !Ref EcsSecurityGroup
  EcsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Security Group
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          SourceSecurityGroupId: !Ref EcsALBSecurityGroup
        - IpProtocol: tcp
          FromPort: '8545'
          ToPort: '8545'
          SourceSecurityGroupId: !Ref EcsALBSecurityGroup
        - IpProtocol: tcp
          FromPort: '8180'
          ToPort: '8180'
          SourceSecurityGroupId: !Ref EcsALBSecurityGroup
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          SourceSecurityGroupId: !Ref EcsALBSecurityGroup
  EcsALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Security Group
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8545'
          ToPort: '8545'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8180'
          ToPort: '8180'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
  CloudwatchLogsGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Join ['-', [ECSLogGroup, !Ref 'AWS::StackName']]
      RetentionInDays: 14
  ECSCluster:
    Type: AWS::ECS::Cluster
  taskdefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Join ['', [!Ref 'AWS::StackName', -ecs-ethcore-parity]]
      ContainerDefinitions:
       -
        Name: ethcore-parity
        MountPoints:
         - ContainerPath: /mnt/parity
           SourceVolume: efs-vol
        Command: 
          - "--ui-interface"
          - "0.0.0.0"
          - "--ui-no-validation"
          - "--warp"
          - "--jsonrpc-interface"
          - "0.0.0.0"
          - "--jsonrpc-hosts"
          - "all"
          - "--log-file"
          - "/var/log/parity.log"
          - "--chain"
          - "kovan"
          - "--base-path"
          - "/mnt/parity"
        Cpu: '10'
        Essential: 'true'
        Image: ethcore/parity:nightly
        Memory: '300'
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group: !Ref 'CloudwatchLogsGroup'
            awslogs-region: !Ref 'AWS::Region'
            awslogs-stream-prefix: ecs-ethcore-parity
        PortMappings:
         - ContainerPort: 8080
           HostPort: 8080
         - ContainerPort: 8545
           HostPort: 8545
         - ContainerPort: 8180
           HostPort: 8180		   
      Volumes:
      - Name: efs-vol
        Host:
         SourcePath: /mnt/efs
  ECSALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: ECSALB
      Scheme: internet-facing
      LoadBalancerAttributes:
      - Key: idle_timeout.timeout_seconds
        Value: '60'
      Subnets: !Ref 'SubnetID'
      SecurityGroups: [!Ref 'EcsALBSecurityGroup']
  ALBListener1:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: ECSServiceRole
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref 'ECSTG'
      LoadBalancerArn: !Ref 'ECSALB'
      Port: '8080'
      Protocol: HTTP
  ECSALBListenerRule1:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DependsOn: ALBListener1
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn: !Ref 'ECSTG'
      Conditions:
      - Field: path-pattern
        Values: [/]
      ListenerArn: !Ref 'ALBListener1'
      Priority: 1
  ALBListener2:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: ECSServiceRole
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref 'ECSTG'
      LoadBalancerArn: !Ref 'ECSALB'
      Port: '8545'
      Protocol: HTTP
  ECSALBListenerRule2:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DependsOn: ALBListener2
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn: !Ref 'ECSTG'
      Conditions:
      - Field: path-pattern
        Values: [/]
      ListenerArn: !Ref 'ALBListener2'
      Priority: 1
  ALBListener3:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: ECSServiceRole
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref 'ECSTG'
      LoadBalancerArn: !Ref 'ECSALB'
      Port: '8180'
      Protocol: HTTP
  ECSALBListenerRule3:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DependsOn: ALBListener3
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn: !Ref 'ECSTG'
      Conditions:
      - Field: path-pattern
        Values: [/]
      ListenerArn: !Ref 'ALBListener3'
      Priority: 1
  ALBListener4:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: ECSServiceRole
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref 'ECSTG'
      LoadBalancerArn: !Ref 'ECSALB'
      Port: '80'
      Protocol: HTTP
  ECSALBListenerRule4:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DependsOn: ALBListener4
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn: !Ref 'ECSTG'
      Conditions:
      - Field: path-pattern
        Values: [/]
      ListenerArn: !Ref 'ALBListener3'
      Priority: 1
  ECSTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: ECSALB
    Properties:
      HealthCheckIntervalSeconds: 60
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 30
      HealthyThresholdCount: 3
      Name: ECSTG
      Port: 8180
      Protocol: HTTP
      UnhealthyThresholdCount: 3
      VpcId: !Ref 'VpcId'
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 0
  ECSAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    DependsOn:
     - MountTarget1
     - MountTarget2
    Properties:
      VPCZoneIdentifier: !Ref 'SubnetID'
      LaunchConfigurationName: !Ref 'ContainerInstances'
      MinSize: '1'
      MaxSize: !Ref 'MaxSize'
      DesiredCapacity: !Ref 'DesiredCapacity'
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: 'true'
  ContainerInstances:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !FindInMap [AWSRegionToAMI, !Ref 'AWS::Region', AMIID]
      SecurityGroups: [!Ref 'EcsSecurityGroup']
      InstanceType: !Ref 'InstanceType'
      IamInstanceProfile: !Ref 'EC2InstanceProfile'
      KeyName: !Ref 'KeyName'
      UserData:
        Fn::Base64: !Sub
         - |
          #!/bin/bash -xe
          yum update -y
          yum install -y git
          yum install -y nfs-utils
          yum install -y ecs-init
          yum install -y aws-cfn-bootstrap
          yum install httpd -y
          mkdir /mnt/efs
          cd /mnt/efs
          mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2 ${efsDnsName}:/ /mnt/efs
          if find . -mindepth 1 -print -quit | grep -q .; then
            "echo not empty, do nothing"
          else
            echo "The directory /mnt/efs is empty"
            git clone https://github.com/jayyousi/ethcore_parity.git repository
            cp -r ./repository/config/* .		
            cp -r ./repository/scripts/* /var/www/cgi-bin/
            rm -rf ./repository/
          fi
          echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource ECSAutoScalingGroup --region ${AWS::Region}
          service docker start
          chkconfig docker on
          service httpd start
          chkconfig httpd on
          usermod -a -G docker apache
          start ecs
         - {
              efsDnsName: !Join ['', [!Ref ParityFileSystem, '.efs.', !Ref "AWS::Region", '.amazonaws.com']],
           }
  service:
    Type: AWS::ECS::Service
    DependsOn: ALBListener1
    Properties:
      Cluster: !Ref 'ECSCluster'
      DesiredCount: '1'
      LoadBalancers:
#       - ContainerName: ethcore-parity
#        ContainerPort: '8080'
#        TargetGroupArn: !Ref 'ECSTG'
#       - ContainerName: ethcore-parity
#         ContainerPort: '8545'
#         TargetGroupArn: !Ref 'ECSTG'
       - ContainerName: ethcore-parity
         ContainerPort: '8180'
         TargetGroupArn: !Ref 'ECSTG'
      Role: !Ref 'ECSServiceRole'
      TaskDefinition: !Ref 'taskdefinition'
  ECSServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: ecs-service
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action: ['elasticloadbalancing:DeregisterInstancesFromLoadBalancer', 'elasticloadbalancing:DeregisterTargets',
              'elasticloadbalancing:Describe*', 'elasticloadbalancing:RegisterInstancesWithLoadBalancer',
              'elasticloadbalancing:RegisterTargets', 'ec2:Describe*', 'ec2:AuthorizeSecurityGroupIngress']
            Resource: '*'
  ServiceScalingTarget:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    DependsOn: service
    Properties:
      MaxCapacity: 2
      MinCapacity: 1
      ResourceId: !Join ['', [service/, !Ref 'ECSCluster', /, !GetAtt [service, Name]]]
      RoleARN: !GetAtt [AutoscalingRole, Arn]
      ScalableDimension: ecs:service:DesiredCount
      ServiceNamespace: ecs
  ServiceScalingPolicy:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Properties:
      PolicyName: AStepPolicy
      PolicyType: StepScaling
      ScalingTargetId: !Ref 'ServiceScalingTarget'
      StepScalingPolicyConfiguration:
        AdjustmentType: PercentChangeInCapacity
        Cooldown: 60
        MetricAggregationType: Average
        StepAdjustments:
        - MetricIntervalLowerBound: 0
          ScalingAdjustment: 200
  ALB500sAlarmScaleUp:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: '1'
      Statistic: Average
      Threshold: '10'
      AlarmDescription: Alarm if our ALB generates too many HTTP 500s.
      Period: '60'
      AlarmActions: [!Ref 'ServiceScalingPolicy']
      Namespace: AWS/ApplicationELB
      Dimensions:
      - Name: ECSService
        Value: !Ref 'service'
      ComparisonOperator: GreaterThanThreshold
      MetricName: HTTPCode_ELB_5XX_Count
  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ec2.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: ecs-service
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action: ['ecs:CreateCluster', 'ecs:DeregisterContainerInstance', 'ecs:DiscoverPollEndpoint',
              'ecs:Poll', 'ecs:RegisterContainerInstance', 'ecs:StartTelemetrySession',
              'ecs:Submit*', 'logs:CreateLogStream', 'logs:PutLogEvents']
            Resource: '*'
  AutoscalingRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [application-autoscaling.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: service-autoscaling
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action: ['application-autoscaling:*', 'cloudwatch:DescribeAlarms', 'cloudwatch:PutMetricAlarm',
              'ecs:DescribeServices', 'ecs:UpdateService']
            Resource: '*'
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles: [!Ref 'EC2Role']
Outputs:
  ecsservice:
    Value: !Ref 'service'
  ecscluster:
    Value: !Ref 'ECSCluster'
  ECSALB:
    Description: Your ALB DNS URL
    Value: !Join ['', [!GetAtt [ECSALB, DNSName]]]
  taskdef:
    Value: !Ref 'taskdefinition'
  TOKEN:
    Description: Your Token Generation URL
    Value: !Join ['', [!GetAtt [ECSALB, DNSName] , "/cgi-bin/generate_token.sh"]]
